<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        app:elevation="0dp"
        app:layout_scrollFlags="scroll|enterAlways">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:layout_scrollFlags="scroll|enterAlways">

            <ImageView
                android:id="@+id/img_back_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:padding="14dp"
                android:src="@drawable/ic_back_button"
                tools:ignore="ContentDescription" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/search_settings"
                android:textColor="@color/app_theme_black"
                android:textSize="16sp"
                android:textStyle="bold" />

        </androidx.appcompat.widget.Toolbar>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:layout_marginBottom="10dp"
                android:text="@string/display" />

            <com.google.android.material.button.MaterialButtonToggleGroup
                android:id="@+id/toggleButton_video_type"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:layout_marginBottom="10dp"
                app:selectionRequired="true"
                app:singleSelection="true">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btn_filter_all"
                    style="@style/ToggleButton.ButtonSelector"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.7"
                    android:text="@string/all"
                    android:textAllCaps="false"
                    app:shapeAppearance="@style/ToggleButton.Rounded" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btn_filter_movies"
                    style="@style/ToggleButton.ButtonSelector"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.3"
                    android:text="@string/movies"
                    android:textAllCaps="false"
                    app:shapeAppearance="@style/ToggleButton.Rounded" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btn_filter_series"
                    style="@style/ToggleButton.ButtonSelector"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/series"
                    android:textAllCaps="false"
                    app:shapeAppearance="@style/ToggleButton.Rounded" />
            </com.google.android.material.button.MaterialButtonToggleGroup>

            <LinearLayout
                android:id="@+id/linearLayout_country_filter"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingVertical="16dp">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_weight="1"
                    android:gravity="start"
                    android:text="@string/country"
                    android:textColor="@color/app_theme_black"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/tv_selected_country"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="20dp"
                    android:layout_weight="1"
                    android:gravity="end"
                    android:textSize="16sp"
                    tools:text="США" />
            </LinearLayout>

            <com.google.android.material.divider.MaterialDivider
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <LinearLayout
                android:id="@+id/linearLayout_genre_filter"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingVertical="16dp">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_weight="1"
                    android:gravity="start"
                    android:text="@string/genre"
                    android:textColor="@color/app_theme_black"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/tv_selected_genre"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="20dp"
                    android:layout_weight="1"
                    android:gravity="end"
                    android:textSize="16sp"
                    tools:text="Комедия" />
            </LinearLayout>

            <com.google.android.material.divider.MaterialDivider
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <LinearLayout
                android:id="@+id/linearLayout_year_filter"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingVertical="16dp">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_weight="1"
                    android:gravity="start"
                    android:text="@string/year"
                    android:textColor="@color/app_theme_black"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/tv_selected_years"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="20dp"
                    android:layout_weight="1"
                    android:gravity="end"
                    android:textSize="16sp"
                    tools:text="с 1998 до 2023" />
            </LinearLayout>

            <com.google.android.material.divider.MaterialDivider
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <LinearLayout
                android:id="@+id/linearLayout_rating_filter"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingVertical="16dp">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_weight="1"
                    android:gravity="start"
                    android:text="@string/rating"
                    android:textColor="@color/app_theme_black"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/tv_selected_rating"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="20dp"
                    android:layout_weight="1"
                    android:gravity="end"
                    android:textSize="16sp"
                    tools:text="Любой" />
            </LinearLayout>

            <com.google.android.material.slider.RangeSlider
                android:id="@+id/range_slider_rating"
                style="@style/RangeSliderStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="20dp" />

            <com.google.android.material.divider.MaterialDivider
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:layout_marginVertical="10dp"
                android:text="@string/sorting" />

            <com.google.android.material.button.MaterialButtonToggleGroup
                android:id="@+id/toggleButton_sorting"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:layout_marginBottom="10dp"
                app:checkedButton="@+id/btn_sort_by_date"
                app:selectionRequired="true"
                app:singleSelection="true">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btn_sort_by_date"
                    style="@style/ToggleButton.ButtonSelector"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.7"
                    android:text="@string/date"
                    android:textAllCaps="false"
                    app:shapeAppearance="@style/ToggleButton.Rounded" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btn_sort_by_popularity"
                    style="@style/ToggleButton.ButtonSelector"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.3"
                    android:text="@string/popularity"
                    android:textAllCaps="false"
                    app:shapeAppearance="@style/ToggleButton.Rounded" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btn_sort_by_rating"
                    style="@style/ToggleButton.ButtonSelector"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/rating"
                    android:textAllCaps="false"
                    app:shapeAppearance="@style/ToggleButton.Rounded" />
            </com.google.android.material.button.MaterialButtonToggleGroup>

            <LinearLayout
                android:id="@+id/linearLayout_movie_watched_status"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingVertical="16dp">

                <ImageView
                    android:id="@+id/img_movie_watched_state"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginStart="30dp"
                    app:srcCompat="@drawable/ic_eye_closed" />

                <TextView
                    android:id="@+id/tv_movie_watched_state"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="40dp"
                    android:text="@string/not_viewed"
                    android:textColor="@color/app_theme_black"
                    android:textSize="16sp" />
            </LinearLayout>

            <Button
                android:id="@+id/btn_apply_settings"
                android:layout_marginTop="30dp"
                android:layout_gravity="center_horizontal"
                style="@style/OvalBlueButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingHorizontal="24dp"
                android:text="@string/apply_settings" />
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>


</androidx.coordinatorlayout.widget.CoordinatorLayout>