<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.core.widget.NestedScrollView
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:id="@+id/profile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginBottom="20dp"
        tools:context=".presentation.profile.ProfileMainFragment">


        <!--Просмотрено-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="20dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="20dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textview_watched_films"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/watched"
                android:textColor="@color/app_theme_black"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/all_watched_films"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:clickable="true"
                android:drawablePadding="5dp"
                android:gravity="end"
                android:textColor="@color/app_theme_blue"
                app:drawableRightCompat="@drawable/ic_forward_button"
                app:drawableTint="@color/app_theme_blue"
                tools:text="Все" />
        </LinearLayout>

        <TextView
            android:id="@+id/textview_watched_list_is_empty"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/empty_list"
            android:textColor="@color/app_theme_black"
            android:visibility="gone"
            android:textStyle="italic"
            android:textSize="16sp" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerView_watched_movies"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clipToPadding="false"
            android:orientation="horizontal"
            android:paddingStart="17dp"
            android:paddingEnd="17dp"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:reverseLayout="true"
            app:stackFromEnd="true"
            tools:listitem="@layout/film_list_item" />


        <!--Коллекции-->
        <TextView
            android:id="@+id/textview_collections"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="10dp"
            android:text="@string/collections"
            android:textColor="@color/app_theme_black"
            android:textSize="18sp"
            android:textStyle="bold" />

        <LinearLayout
            android:id="@+id/linear_layout_create_collection"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="20dp"
            android:clickable="true"
            android:orientation="horizontal"
            android:paddingVertical="10dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginEnd="15dp"
                android:src="@drawable/ic_plus"
                app:tint="@color/app_theme_black" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/create_own_collection"
                android:textColor="@color/app_theme_black"
                android:textSize="18sp" />
        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerView_collections"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:orientation="vertical"
            app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
            app:spanCount="2"
            tools:listitem="@layout/collection_card_list_item" />


        <!--Вам было интересно-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="20dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="20dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textview_interesting_movies"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/interesting"
                android:textColor="@color/app_theme_black"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/all_interesting_movies"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:clickable="true"
                android:drawablePadding="5dp"
                android:gravity="end"
                android:textColor="@color/app_theme_blue"
                app:drawableRightCompat="@drawable/ic_forward_button"
                app:drawableTint="@color/app_theme_blue"
                tools:text="Все" />
        </LinearLayout>

        <TextView
            android:id="@+id/textview_interesting_list_is_empty"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/empty_list"
            android:textColor="@color/app_theme_black"
            android:visibility="gone"
            android:textStyle="italic"
            android:textSize="16sp" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerView_interesting_movies"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clipToPadding="false"
            android:orientation="horizontal"
            android:paddingStart="17dp"
            android:paddingEnd="17dp"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:reverseLayout="true"
            app:stackFromEnd="true"
            tools:listitem="@layout/film_list_item" />

    </LinearLayout>
</androidx.core.widget.NestedScrollView>
</androidx.coordinatorlayout.widget.CoordinatorLayout>